--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -51,6 +51,9 @@
       <property name="elideMode">
        <enum>Qt::ElideRight</enum>
       </property>
+      <property name="documentMode">
+       <bool>true</bool>
+      </property>
       <property name="tabsClosable">
        <bool>true</bool>
       </property>
