--- a/src/settings.ui
+++ b/src/settings.ui
@@ -142,6 +142,27 @@
            </property>
           </widget>
          </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_56">
+           <property name="text">
+            <string>Run when selected</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QLineEdit" name="cbSelectionCommand">
+           <property name="toolTip">
+            <string>Automatically send selected text to this application.
+%TEXT% will be replaced with the selected text.</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="placeholderText">
+            <string>goldendict %TEXT%, qolibri %TEXT%, etc.</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
