--- a/src/settings.ui
+++ b/src/settings.ui
@@ -132,31 +132,31 @@
            </item>
           </layout>
          </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_55">
+         <item row="3" column="0" colspan="2">
+          <widget class="QLabel" name="label_57">
            <property name="text">
-            <string>Clipboard</string>
+            <string>Automatically when selected:</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
+         <item row="4" column="1">
           <widget class="QCheckBox" name="cbAutoClipboard">
            <property name="toolTip">
             <string>automatically copy text to clipboard when selected</string>
            </property>
            <property name="text">
-            <string>automatically copy when selected</string>
+            <string>Copy to clipboard</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_56">
+         <item row="5" column="1">
+          <widget class="QCheckBox" name="cbAutoCmdExec">
            <property name="text">
-            <string>Run when selected</string>
+            <string>Run command:</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="6" column="1">
           <widget class="QLineEdit" name="cbSelectionCommand">
            <property name="toolTip">
             <string>Automatically send selected text to this application.
@@ -178,6 +178,22 @@
           <string>Fullscreen display</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -1981,6 +1997,7 @@
   <tabstop>cbWindowShowStatusBar</tabstop>
   <tabstop>cbWindowFixedTabSize</tabstop>
   <tabstop>cbAutoClipboard</tabstop>
+  <tabstop>cbAutoCmdExec</tabstop>
   <tabstop>cbSelectionCommand</tabstop>
   <tabstop>cbWindowFullscreen</tabstop>
   <tabstop>cbMargins</tabstop>
