--- a/src/aboutdlg.ui
+++ b/src/aboutdlg.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>About CoolReaderNG/Qt</string>
+   <string>About crqt-ng</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -32,7 +32,7 @@
           </font>
          </property>
          <property name="text">
-          <string notr="true">CoolReaderNG/Qt %ver%</string>
+          <string notr="true">crqt-ng %ver%</string>
          </property>
         </widget>
        </item>
