--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -589,6 +589,17 @@
     <string>Left</string>
    </property>
   </action>
+  <action name="actionPrevPage3">
+   <property name="text">
+    <string>Previous Page</string>
+   </property>
+   <property name="toolTip">
+    <string>Previous Page</string>
+   </property>
+   <property name="shortcut">
+    <string>Shift+Space</string>
+   </property>
+  </action>
   <action name="actionNextPage3">
    <property name="text">
     <string>Next Page</string>
