--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -43,13 +43,13 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="tabShape">
-       <enum>QTabWidget::Rounded</enum>
+       <enum>QTabWidget::TabShape::Rounded</enum>
       </property>
       <property name="currentIndex">
        <number>-1</number>
       </property>
       <property name="elideMode">
-       <enum>Qt::ElideRight</enum>
+       <enum>Qt::TextElideMode::ElideRight</enum>
       </property>
       <property name="documentMode">
        <bool>true</bool>
@@ -69,8 +69,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
-     <height>23</height>
+     <width>480</width>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -92,6 +92,7 @@
     <property name="title">
      <string>View</string>
     </property>
+    <addaction name="actionResizeToXteink"/>
     <addaction name="actionFindText"/>
     <addaction name="actionToggle_Pages_Scroll"/>
     <addaction name="actionMinimize"/>
@@ -195,7 +196,12 @@
     <string>Ctrl+Q</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::QuitRole</enum>
+    <enum>QAction::MenuRole::QuitRole</enum>
+   </property>
+  </action>
+  <action name="actionResizeToXteink">
+   <property name="text">
+    <string>Resize to Xteink</string>
    </property>
   </action>
   <action name="actionMinimize">
@@ -206,7 +212,7 @@
     <string>Esc</string>
    </property>
    <property name="shortcutContext">
-    <enum>Qt::WindowShortcut</enum>
+    <enum>Qt::ShortcutContext::WindowShortcut</enum>
    </property>
   </action>
   <action name="actionNextPage">
@@ -462,7 +468,7 @@
     <string>About Qt</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::AboutQtRole</enum>
+    <enum>QAction::MenuRole::AboutQtRole</enum>
    </property>
   </action>
   <action name="actionAbout">
@@ -473,7 +479,7 @@
     <string>About the program</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::AboutRole</enum>
+    <enum>QAction::MenuRole::AboutRole</enum>
    </property>
   </action>
   <action name="actionAddBookmark">
