--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -669,7 +669,7 @@
               <property name="minimumSize">
                <size>
                 <width>60</width>
-                <height>30</height>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
@@ -697,7 +697,7 @@
               <property name="minimumSize">
                <size>
                 <width>60</width>
-                <height>30</height>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
@@ -729,6 +729,12 @@
             </item>
             <item>
              <widget class="QLabel" name="lblPageCount">
+              <property name="minimumSize">
+               <size>
+                <width>40</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
                <string>/ 1</string>
               </property>
@@ -745,7 +751,7 @@
               <property name="minimumSize">
                <size>
                 <width>60</width>
-                <height>30</height>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
@@ -773,7 +779,7 @@
               <property name="minimumSize">
                <size>
                 <width>60</width>
-                <height>30</height>
+                <height>0</height>
                </size>
               </property>
               <property name="toolTip">
