Add locked flag to export profiles with Custom profile
- Add 'locked' boolean flag to XtExportProfile class
- Locked profiles disable format/width/height controls in UI
- Default X3 and X4 profiles are locked (preset resolutions)
- Add new unlocked 'Custom' profile for user-defined settings
- Update format dropdown labels to show bit depth (XTC/XTCH)

--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -84,12 +84,12 @@
              </property>
              <item>
               <property name="text">
-               <string>XTC</string>
+               <string>XTC (1-bit)</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>XTCH</string>
+               <string>XTCH (2-bit)</string>
               </property>
              </item>
             </widget>
