--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -908,16 +908,6 @@
     </widget>
    </item>
    <item>
-    <widget class="QProgressBar" name="progressBar">
-     <property name="visible">
-      <bool>false</bool>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
-   <item>
     <layout class="QHBoxLayout" name="buttonsLayout">
      <item>
       <spacer name="buttonsSpacer">
@@ -933,6 +923,22 @@
       </spacer>
      </item>
      <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="visible">
+        <bool>false</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btnExport">
        <property name="text">
         <string>Export</string>
@@ -943,9 +949,9 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnCancel">
+      <widget class="QPushButton" name="btnClose">
        <property name="text">
-        <string>Cancel</string>
+        <string>Close</string>
        </property>
       </widget>
      </item>
@@ -956,7 +962,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>btnCancel</sender>
+   <sender>btnClose</sender>
    <signal>clicked()</signal>
    <receiver>XtExportDlg</receiver>
    <slot>reject()</slot>
