Replace interline space combo box with spinner control
Change the interline spacing setting from a QComboBox with predefined
values to a QSpinBox allowing fine-grained control:
- Range: 60% to 150%
- Step: 1%
- Suffix: % symbol displayed in control

This gives users more precise control over line spacing instead of
being limited to the 17 predefined values.

--- a/src/settings.ui
+++ b/src/settings.ui
@@ -1839,7 +1839,23 @@
           </widget>
          </item>
          <item row="17" column="1">
-          <widget class="QComboBox" name="cbInterlineSpace"/>
+          <widget class="QSpinBox" name="sbInterlineSpace">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <number>60</number>
+           </property>
+           <property name="maximum">
+            <number>150</number>
+           </property>
+           <property name="singleStep">
+            <number>1</number>
+           </property>
+           <property name="value">
+            <number>100</number>
+           </property>
+          </widget>
          </item>
          <item row="18" column="0">
           <widget class="QLabel" name="label_15">
@@ -2254,7 +2270,7 @@
   <tabstop>cbEnableHyph</tabstop>
   <tabstop>cbHyphenation</tabstop>
   <tabstop>cbFontShaping</tabstop>
-  <tabstop>cbInterlineSpace</tabstop>
+  <tabstop>sbInterlineSpace</tabstop>
   <tabstop>cbMinSpaceWidth</tabstop>
   <tabstop>cbFontKerning</tabstop>
   <tabstop>cbFloatingPunctuation</tabstop>
